{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 5317,
  "lineage": "c1e32bb0-3a04-1fcf-d257-0e835810da27",
  "resources": [
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c3c95de27267e5e",
            "association_id": "eipassoc-06185bc2d9ef7ec15",
            "domain": "vpc",
            "id": "eipalloc-07c3c95de27267e5e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0cfdab6e39dae223e",
            "private_dns": "ip-10-32-2-126.ap-southeast-1.compute.internal",
            "private_ip": "10.32.2.126",
            "public_dns": "ec2-52-74-65-196.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.65.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089aa3f5e03a087a5",
            "association_id": "eipassoc-0dacf72f0667a0346",
            "domain": "vpc",
            "id": "eipalloc-089aa3f5e03a087a5",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fb25df445ce265cf",
            "private_dns": "ip-10-32-3-154.ap-southeast-1.compute.internal",
            "private_ip": "10.32.3.154",
            "public_dns": "ec2-18-141-248-15.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.248.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:internet-gateway/igw-0975ac1bab697d92a",
            "id": "igw-0975ac1bab697d92a",
            "owner_id": "029319782524",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/dev-default-lb/7d28a7d083640c59",
            "arn_suffix": "app/dev-default-lb/7d28a7d083640c59",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-default-lb-907022524.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/dev-default-lb/7d28a7d083640c59",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-default-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05c453d25e6ba6037"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0eaaddad9d9cd3e67"
              },
              {
                "subnet_id": "subnet-0f0fcd81cb4b6e851"
              }
            ],
            "subnets": [
              "subnet-0eaaddad9d9cd3e67",
              "subnet-0f0fcd81cb4b6e851"
            ],
            "tags": {
              "Name": "dev-lb-default"
            },
            "tags_all": {
              "Name": "dev-lb-default"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_security_group.lb",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bc_client_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:listener/app/dev-default-lb/7d28a7d083640c59/e9f408907cccde90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/dev-bc-client-api-tg-7WW4/5efd2c754a741f12",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:listener/app/dev-default-lb/7d28a7d083640c59/e9f408907cccde90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/dev-default-lb/7d28a7d083640c59",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_lb.default",
            "module.blockchain-client-dev.aws_lb_target_group.bc_client_api",
            "module.blockchain-client-dev.aws_security_group.lb",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones",
            "module.blockchain-client-dev.random_string.target_group"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bc_client_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/dev-bc-client-api-tg-7WW4/5efd2c754a741f12",
            "arn_suffix": "targetgroup/dev-bc-client-api-tg-7WW4/5efd2c754a741f12",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/dev-bc-client-api-tg-7WW4/5efd2c754a741f12",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-bc-client-api-tg-7WW4",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-bc-client-api-tg"
            },
            "tags_all": {
              "Name": "dev-bc-client-api-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.random_string.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c3c95de27267e5e",
            "association_id": "eipassoc-06185bc2d9ef7ec15",
            "connectivity_type": "public",
            "id": "nat-0895af239aade654e",
            "network_interface_id": "eni-0cfdab6e39dae223e",
            "private_ip": "10.32.2.126",
            "public_ip": "52.74.65.196",
            "subnet_id": "subnet-0f0fcd81cb4b6e851",
            "tags": {
              "Name": "dev-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-nat-gateway"
            }
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089aa3f5e03a087a5",
            "association_id": "eipassoc-0dacf72f0667a0346",
            "connectivity_type": "public",
            "id": "nat-0a29bcb8ef60e0a5a",
            "network_interface_id": "eni-0fb25df445ce265cf",
            "private_ip": "10.32.3.154",
            "public_ip": "18.141.248.15",
            "subnet_id": "subnet-0eaaddad9d9cd3e67",
            "tags": {
              "Name": "dev-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-nat-gateway"
            }
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0975ac1bab697d92a",
            "id": "r-rtb-08bae33367c2e64601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08bae33367c2e6460",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:route-table/rtb-0cde710764d05a05c",
            "id": "rtb-0cde710764d05a05c",
            "owner_id": "029319782524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0895af239aade654e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-table-private"
            },
            "tags_all": {
              "Name": "dev-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_nat_gateway.gateway",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:route-table/rtb-09624ef8cef5d2d62",
            "id": "rtb-09624ef8cef5d2d62",
            "owner_id": "029319782524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a29bcb8ef60e0a5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-table-private"
            },
            "tags_all": {
              "Name": "dev-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_nat_gateway.gateway",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d3fda776f1ea6c",
            "route_table_id": "rtb-0cde710764d05a05c",
            "subnet_id": "subnet-0d763324196bcb1bf"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_nat_gateway.gateway",
            "module.blockchain-client-dev.aws_route_table.private",
            "module.blockchain-client-dev.aws_subnet.private",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f533b0931ac33622",
            "route_table_id": "rtb-09624ef8cef5d2d62",
            "subnet_id": "subnet-05d2e96a915ec8a69"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_eip.gateway",
            "module.blockchain-client-dev.aws_internet_gateway.gateway",
            "module.blockchain-client-dev.aws_nat_gateway.gateway",
            "module.blockchain-client-dev.aws_route_table.private",
            "module.blockchain-client-dev.aws_subnet.private",
            "module.blockchain-client-dev.aws_subnet.public",
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bc_client_api_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:security-group/sg-0576aee9cc6704c4e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0576aee9cc6704c4e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c453d25e6ba6037"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "dev-bc-client-api-task-sg",
            "name_prefix": "",
            "owner_id": "029319782524",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_security_group.lb",
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:security-group/sg-05c453d25e6ba6037",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c453d25e6ba6037",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-main-alb-security-group",
            "name_prefix": "",
            "owner_id": "029319782524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg-lb"
            },
            "tags_all": {
              "Name": "dev-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0d763324196bcb1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d763324196bcb1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Name": "dev-private-subnet"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-05d2e96a915ec8a69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d2e96a915ec8a69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Name": "dev-private-subnet"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0f0fcd81cb4b6e851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0fcd81cb4b6e851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Name": "dev-public-subnet"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0eaaddad9d9cd3e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaaddad9d9cd3e67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Name": "dev-public-subnet"
            },
            "vpc_id": "vpc-0f2c78acdf537fa7f"
          },
          "dependencies": [
            "module.blockchain-client-dev.aws_vpc.default",
            "module.blockchain-client-dev.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:vpc/vpc-0f2c78acdf537fa7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-05ccb08ad637319ef",
            "default_route_table_id": "rtb-08bae33367c2e6460",
            "default_security_group_id": "sg-0ac9690ef4afdc4de",
            "dhcp_options_id": "dopt-0275df4fb27fd81b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2c78acdf537fa7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bae33367c2e6460",
            "owner_id": "029319782524",
            "tags": {
              "Name": "dev-vpc-default"
            },
            "tags_all": {
              "Name": "dev-vpc-default"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fae2123e3aa56fd1",
            "association_id": "eipassoc-0b5a214f76153b849",
            "domain": "vpc",
            "id": "eipalloc-0fae2123e3aa56fd1",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-06f1e432a2e0587d0",
            "private_dns": "ip-10-32-2-9.ap-southeast-1.compute.internal",
            "private_ip": "10.32.2.9",
            "public_dns": "ec2-18-142-224-65.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.224.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-eip"
            },
            "tags_all": {
              "Name": "staging-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d673ee4bfc60a030",
            "association_id": "eipassoc-014524ca8a91e38d7",
            "domain": "vpc",
            "id": "eipalloc-0d673ee4bfc60a030",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0925c4a183afc68c9",
            "private_dns": "ip-10-32-3-243.ap-southeast-1.compute.internal",
            "private_ip": "10.32.3.243",
            "public_dns": "ec2-18-139-120-196.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.120.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-eip"
            },
            "tags_all": {
              "Name": "staging-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:internet-gateway/igw-05c09186bf9c2dbe7",
            "id": "igw-05c09186bf9c2dbe7",
            "owner_id": "029319782524",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/staging-default-lb/6c8539395e9fda9c",
            "arn_suffix": "app/staging-default-lb/6c8539395e9fda9c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "staging-default-lb-1732369269.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/staging-default-lb/6c8539395e9fda9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "staging-default-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0870c1cbb7715cfeb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a05a5c5c1787944"
              },
              {
                "subnet_id": "subnet-0a6759dacf6cb85f1"
              }
            ],
            "subnets": [
              "subnet-00a05a5c5c1787944",
              "subnet-0a6759dacf6cb85f1"
            ],
            "tags": {
              "Name": "staging-lb-default"
            },
            "tags_all": {
              "Name": "staging-lb-default"
            },
            "vpc_id": "vpc-0778adb88b0cb768e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_security_group.lb",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bc_client_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:listener/app/staging-default-lb/6c8539395e9fda9c/24fc747bf1f2298d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/staging-bc-client-api-tg-urOi/059f938a36dce2a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:listener/app/staging-default-lb/6c8539395e9fda9c/24fc747bf1f2298d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:loadbalancer/app/staging-default-lb/6c8539395e9fda9c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_lb.default",
            "module.blockchain-client-staging.aws_lb_target_group.bc_client_api",
            "module.blockchain-client-staging.aws_security_group.lb",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones",
            "module.blockchain-client-staging.random_string.target_group"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bc_client_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/staging-bc-client-api-tg-urOi/059f938a36dce2a3",
            "arn_suffix": "targetgroup/staging-bc-client-api-tg-urOi/059f938a36dce2a3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:029319782524:targetgroup/staging-bc-client-api-tg-urOi/059f938a36dce2a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "staging-bc-client-api-tg-urOi",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "staging-bc-client-api-tg"
            },
            "tags_all": {
              "Name": "staging-bc-client-api-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.random_string.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fae2123e3aa56fd1",
            "association_id": "eipassoc-0b5a214f76153b849",
            "connectivity_type": "public",
            "id": "nat-0248dce199c1d6cea",
            "network_interface_id": "eni-06f1e432a2e0587d0",
            "private_ip": "10.32.2.9",
            "public_ip": "18.142.224.65",
            "subnet_id": "subnet-0a6759dacf6cb85f1",
            "tags": {
              "Name": "staging-nat-gateway"
            },
            "tags_all": {
              "Name": "staging-nat-gateway"
            }
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d673ee4bfc60a030",
            "association_id": "eipassoc-014524ca8a91e38d7",
            "connectivity_type": "public",
            "id": "nat-0feb9dc7541dcc136",
            "network_interface_id": "eni-0925c4a183afc68c9",
            "private_ip": "10.32.3.243",
            "public_ip": "18.139.120.196",
            "subnet_id": "subnet-00a05a5c5c1787944",
            "tags": {
              "Name": "staging-nat-gateway"
            },
            "tags_all": {
              "Name": "staging-nat-gateway"
            }
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c09186bf9c2dbe7",
            "id": "r-rtb-0e697c1d968bee77f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e697c1d968bee77f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:route-table/rtb-0861e60dea0d881e0",
            "id": "rtb-0861e60dea0d881e0",
            "owner_id": "029319782524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0248dce199c1d6cea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-table-private"
            },
            "tags_all": {
              "Name": "staging-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_nat_gateway.gateway",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:route-table/rtb-05a8782ad27c28dca",
            "id": "rtb-05a8782ad27c28dca",
            "owner_id": "029319782524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0feb9dc7541dcc136",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-table-private"
            },
            "tags_all": {
              "Name": "staging-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_nat_gateway.gateway",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000e0f8d497809750",
            "route_table_id": "rtb-0861e60dea0d881e0",
            "subnet_id": "subnet-0898f312a0b8e22de"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_nat_gateway.gateway",
            "module.blockchain-client-staging.aws_route_table.private",
            "module.blockchain-client-staging.aws_subnet.private",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a15b36e9b96a5811",
            "route_table_id": "rtb-05a8782ad27c28dca",
            "subnet_id": "subnet-0a9f90c956deb8b83"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_eip.gateway",
            "module.blockchain-client-staging.aws_internet_gateway.gateway",
            "module.blockchain-client-staging.aws_nat_gateway.gateway",
            "module.blockchain-client-staging.aws_route_table.private",
            "module.blockchain-client-staging.aws_subnet.private",
            "module.blockchain-client-staging.aws_subnet.public",
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bc_client_api_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:security-group/sg-0ebe7c533092c5cf0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebe7c533092c5cf0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0870c1cbb7715cfeb"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "staging-bc-client-api-task-sg",
            "name_prefix": "",
            "owner_id": "029319782524",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_security_group.lb",
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:security-group/sg-0870c1cbb7715cfeb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0870c1cbb7715cfeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "staging-main-alb-security-group",
            "name_prefix": "",
            "owner_id": "029319782524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-sg-lb"
            },
            "tags_all": {
              "Name": "staging-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0898f312a0b8e22de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0898f312a0b8e22de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-subnet"
            },
            "tags_all": {
              "Name": "staging-private-subnet"
            },
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0a9f90c956deb8b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9f90c956deb8b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-subnet"
            },
            "tags_all": {
              "Name": "staging-private-subnet"
            },
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-0a6759dacf6cb85f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6759dacf6cb85f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-subnet"
            },
            "tags_all": {
              "Name": "staging-public-subnet"
            },
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:subnet/subnet-00a05a5c5c1787944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a05a5c5c1787944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029319782524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-subnet"
            },
            "tags_all": {
              "Name": "staging-public-subnet"
            },
            "vpc_id": "vpc-0778adb88b0cb768e"
          },
          "dependencies": [
            "module.blockchain-client-staging.aws_vpc.default",
            "module.blockchain-client-staging.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-client-staging",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:029319782524:vpc/vpc-0778adb88b0cb768e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-00098ba910a52883e",
            "default_route_table_id": "rtb-0e697c1d968bee77f",
            "default_security_group_id": "sg-03559e03af3631df4",
            "dhcp_options_id": "dopt-0275df4fb27fd81b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0778adb88b0cb768e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e697c1d968bee77f",
            "owner_id": "029319782524",
            "tags": {
              "Name": "staging-vpc-default"
            },
            "tags_all": {
              "Name": "staging-vpc-default"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}